test/cases/compile_errors/import_outside_package_path.zig
comptime {
    _ = @import("../a.zig");
}

// error
// backend=stage2
// target=native
//
// :2:17: error: import of file outside module path: '../a.zig'
